deploy/argocd/apps/tempo/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tempo
  labels:
    istio.io/dataplane-mode: ambient
